@@ -1,5 +1,7 @@
 package org.DSLab2;
 
+import org.DSLab2.MyApplication.RBType.RBNode;
+import org.DSLab2.MyApplication.RBType.RBTree;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -10,7 +12,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-public class JUnitTest {
+public class RBTest {
     // these methods to help in assertion
     List<List<Integer>> res = new ArrayList<>();
     void traverse (RBNode<Integer> root){
@@ -37,13 +39,13 @@ public class JUnitTest {
     public void test() { // check the root always is black
         int[] toBeInserted = {85, 137, 167, 96, 97, 12, 98, 48, 94, 25, 160, 130, 73, 59, 142, 155, 82, 188, 5, 81,};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         Assertions.assertEquals(toBeInserted.length,rbt.size());
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(
-                 Arrays.asList(96,73,48,12,5,25,59,85,82,81,94,137,98,97,130,160,142,155,167,188)
+                Arrays.asList(96,73,48,12,5,25,59,85,82,81,94,137,98,97,130,160,142,155,167,188)
                 ,Arrays.asList(0,0,1,0,1,1,0,1,0,1,0,0,0,1,1,1,0,1,0,1));
         Assertions.assertEquals(res, correct);
     }
@@ -52,11 +54,11 @@ public class JUnitTest {
     public void insertTheBlackRoot() { // check the root always is black
         int[] toBeInserted = {1};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
-        List<List<Integer>> correct = Arrays.asList(Arrays.asList(1),Arrays.asList(0));
+        List<List<Integer>> correct = Arrays.asList(List.of(1), List.of(0));
         Assertions.assertEquals(res, correct);
     }
 
@@ -64,8 +66,8 @@ public class JUnitTest {
     public void insertWithBlackParent() { // add a node to a parent black nothing to do
         int[] toBeInserted = {1,2};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(1,2),Arrays.asList(0, 1));
@@ -76,8 +78,8 @@ public class JUnitTest {
     public void insertWithUncleAndParentRed() {
         int[] toBeInserted = {5,3,6,2};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(5,3,2,6),Arrays.asList(0,0,1,0));
@@ -88,8 +90,8 @@ public class JUnitTest {
     public void insertWithParentRUncleB1() {//ll rotate
         int[] toBeInserted = {5,3,6,2,1};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(5,2,1,3,6),Arrays.asList(0,0,1,1,0));
@@ -100,8 +102,8 @@ public class JUnitTest {
     public void insertWithParentRUncleB2() {// rr rotate
         int[] toBeInserted = {5,3,6,2,1,4};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(5,2,1,3,4,6),Arrays.asList(0,1,0,0,1,0));
@@ -112,8 +114,8 @@ public class JUnitTest {
     public void insertWithParentRUncleB3() {// rl rotate
         int[] toBeInserted = {10,3,13,7,2,1,9,8};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(10,3,2,1,8,7,9,13),Arrays.asList(0,1,0,1,0,1,1,0));
@@ -123,8 +125,8 @@ public class JUnitTest {
     public void testInsertion1() {
         int[] toBeInserted = {1,2,3,4,5};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(2,1,4,3,5),Arrays.asList(0,0,0,1,1));
@@ -135,8 +137,8 @@ public class JUnitTest {
     public void testInsertion2() {
         int[] toBeInserted = {41, 38, 31, 12, 19, 8};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(38,19,12,8,31,41),Arrays.asList(0,1,0,1,0,0));
@@ -147,8 +149,8 @@ public class JUnitTest {
     public void testInsertDuplicate() {
         int[] toBeInserted = {41, 38, 31, 12, 12, 19, 8, 19};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         traverse(rbt.getRoot());
         List<List<Integer>> correct = Arrays.asList(Arrays.asList(38,19,12,8,31,41),Arrays.asList(0,1,0,1,0,0));
@@ -161,9 +163,9 @@ public class JUnitTest {
         int[] toBeInserted = {1,2,3,4,5};
         Set<Integer> unique = new HashSet<>();
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
-            unique.add(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
+            unique.add(j);
         }
         int expected = unique.size();
         int actual = rbt.size();
@@ -175,9 +177,9 @@ public class JUnitTest {
         int[] toBeInserted = {41, 38, 31, 12, 12, 19, 8, 19};
         Set<Integer> unique = new HashSet<>();
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
-            unique.add(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
+            unique.add(j);
         }
         int expected = unique.size();
         int actual = rbt.size();
@@ -188,8 +190,8 @@ public class JUnitTest {
     public void testSizeDelete() {
         int[] toBeInserted = {1,2,3,4};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(2);
         int expected = toBeInserted.length-1;
@@ -200,8 +202,8 @@ public class JUnitTest {
     public void testSizeDeleteNull() {
         int[] toBeInserted = {1,2,3,4};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(100);
         int expected = toBeInserted.length;
@@ -214,8 +216,8 @@ public class JUnitTest {
     public void deleteEasyCase1() {// delete leaf red node
         int[] toBeInserted = {10,3,13,7,2,1,9,8};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(7);
         traverse(rbt.getRoot());
@@ -226,8 +228,8 @@ public class JUnitTest {
     public void deleteEasyCase2() {// delete internal red node
         int[] toBeInserted = {10,3,13,7,2,1,9,8};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(3);
         traverse(rbt.getRoot());
@@ -238,8 +240,8 @@ public class JUnitTest {
     public void deleteHardCase1() {// delete internal red node
         int[] toBeInserted = {1,2,3,0};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(0);
         rbt.delete(1);
@@ -252,8 +254,8 @@ public class JUnitTest {
     public void deleteHardCase2() {// delete internal red node case sibling child is red lr
         int[] toBeInserted = {1,6,10,0,7};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(0);
         rbt.delete(7);
@@ -270,10 +272,10 @@ public class JUnitTest {
                 Arrays.asList(Arrays.asList(38,19,31,41),Arrays.asList(0,0,1,0)),
                 Arrays.asList(Arrays.asList(38,31,41),Arrays.asList(0,0,0)),
                 Arrays.asList(Arrays.asList(38,41),Arrays.asList(0,1)),
-                Arrays.asList(Arrays.asList(41),Arrays.asList(0)));
+                Arrays.asList(List.of(41), List.of(0)));
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         for(int i=0;i<delete.length;i++){
             rbt.delete(delete[i]);
@@ -286,8 +288,8 @@ public class JUnitTest {
     public void deleteHardCase4() {// delete internal with sibling red and none of his children are red
         int[] toBeInserted = {10,8,15,3};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(3);
         rbt.insert(13);
@@ -303,8 +305,8 @@ public class JUnitTest {
     public void deleteHardCase5() {// delete internal red node case sibling child is red lr
         int[] toBeInserted = {1,6,10,0,7};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(0);
         rbt.delete(7);
@@ -318,8 +320,8 @@ public class JUnitTest {
     public void deletionWithRedAlpha() {// delete internal red node case sibling child is red lr
         int[] toBeInserted = {150,100,200,50,120,130,110};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         rbt.delete(50);
         traverse(rbt.getRoot());
@@ -336,8 +338,8 @@ public class JUnitTest {
     public void testHeight() {// delete internal red node case sibling child is red lr
         int[] toBeInserted = {1,2,3,4,5,6};
         RBTree<Integer> rbt = new RBTree<>();
-        for(int i=0;i<toBeInserted.length;i++){
-            rbt.insert(toBeInserted[i]);
+        for (int j : toBeInserted) {
+            rbt.insert(j);
         }
         Assertions.assertEquals(4, rbt.height());
     }
